@@ -403,6 +403,9 @@ Bug Fixes
   prevent an exception in one facet command from affecting another
   facet command. (yonik)
 
+* SOLR-2110: Remove the restriction on names for local params
+  substitution/dereferencing.  Properly encode local params in
+  distributed faceting.  (yonik)
 
 Other Changes
 ----------------------
